# MySTL

./: .clang-format  .gitignore  CMakeLists.txt  README.md  format.py  plan.md
cmake/: CompilerFeatures.cmake  CompilerOptions.cmake  InstallConfig.cmake  Sanitizers.cmake  Warnings.cmake  mystl-config.cmake.in  mystl.pc.in
docs/: compiler_cpp23_support.md  memory_dependencies.md  plan.md  pointer_traits_standard_compliance.md
examples/: CMakeLists.txt  basic_example.cpp
include/mystl/: config.hpp  prelude.hpp  stl.hpp  version.hpp
include/mystl/algorithm/: algorithm.hpp  binary_search.hpp  copy.hpp  count.hpp  fill.hpp  find.hpp  for_each.hpp  heap.hpp  merge.hpp  minmax.hpp  partition.hpp  ranges_algorithm.hpp  set_operations.hpp  sort.hpp  transform.hpp
include/mystl/algorithm/__detail/: alg_base.hpp  find_impl.hpp  heap_impl.hpp  partition_impl.hpp  set_alg_impl.hpp  sort_impl.hpp
include/mystl/algorithms/: heap.hpp  modifying.hpp  non_modifying.hpp  numeric.hpp  sorting.hpp
include/mystl/config/: compiler.hpp  config.hpp  platform.hpp
include/mystl/container/: array.hpp  deque.hpp  forward_list.hpp  hash.hpp  list.h  map.h  multimap.hpp  multiset.hpp  priority_queue.hpp  queue.hpp  set.hpp  stack.hpp  unordered_map.h  unordered_multimap.hpp  unordered_multiset.hpp  unordered_set.hpp  vector.h
include/mystl/container/__detail/: container_common.hpp  hashtable.hpp  list_node.hpp  node_handle.hpp  rb_tree.hpp  vector_base.hpp
include/mystl/containers/: array.hpp  deque.hpp  forward_list.hpp  hive.hpp  inplace_vector.hpp  list.hpp  map.hpp  mdspan.hpp  multimap.hpp  multiset.hpp  set.hpp  span.hpp  string.hpp  string_view.hpp  unordered_map.hpp  unordered_multimap.hpp  unordered_multiset.hpp  unordered_set.hpp  vector.hpp
include/mystl/containers/__details/: deque_buffer.hpp  hash_table.hpp  list_node.hpp  rb_tree.hpp
include/mystl/containers/adapters/: priority_queue.hpp  queue.hpp  stack.hpp
include/mystl/core/: assert.hpp  compare.hpp  concepts.h  concepts.hpp  exception_safety.hpp  initializer_list.hpp  limits.hpp  move.hpp  move_if_noexcept.hpp  pair.hpp  swap.hpp  tuple.hpp  type_traits.hpp  utility.hpp
include/mystl/core/__detail/: compare_impl.hpp  concepts_base.hpp  config_macros.hpp  invoke.hpp  meta.hpp
include/mystl/iterator/: advance.hpp  concepts.hpp  distance.hpp  facade.hpp  insert_iterator.hpp  iterator_adaptor.hpp  iterator_base.hpp  iterator_concepts.hpp  iterator_operations.hpp  iterator_traits.hpp  move_iterator.hpp  reverse_iterator.hpp  traits.hpp
include/mystl/iterator/__detail/: iterator_facade.hpp  iterator_tags.hpp  iterator_traits_impl.hpp  iterator_utils.hpp
include/mystl/iterator/adapters/: back_insert_iterator.hpp  front_insert_iterator.hpp  insert_iterator.hpp  move_iterator.hpp  reverse_iterator.hpp
include/mystl/memory/: allocation_result.hpp  allocator.hpp  allocator_traits.hpp  construct.hpp  destroy.hpp  enable_shared_from_this.hpp  memory_resource.hpp  memory_util.hpp  pointer_traits.hpp  shared_ptr.hpp  uninitialized.hpp  unique_ptr.hpp  weak_ptr.hpp
include/mystl/memory/__detail/: allocator_base.hpp  allocator_traits_impl.hpp  ptr_ops.hpp  ref_count.hpp  uninitialized_ops.hpp
include/mystl/ranges/: concepts.hpp  filter_view.hpp  iota_view.hpp  join_view.hpp  range_access.hpp  range_adaptor_closure.hpp  range_adaptors.hpp  range_concepts.hpp  ranges.hpp  subrange.hpp  take_view.hpp  transform_view.hpp  view.hpp
include/mystl/ranges/__detail/: range_adaptor_utils.hpp  range_base.hpp  range_traits.hpp  subrange_impl.hpp  view_interface.hpp
include/mystl/ranges/views/: drop.hpp  filter.hpp  take.hpp  transform.hpp
include/mystl/threading/: atomic.hpp  condition_variable.hpp  future.hpp  lock_guard.hpp  mutex.hpp  promise.hpp  thread.hpp  thread_local_storage.hpp  unique_lock.hpp
include/mystl/threading/__detail/: atomic_impl.hpp  condition_impl.hpp  mutex_base.hpp  thread_base.hpp  thread_id_impl.hpp
include/mystl/utility/: any.hpp  bitset.hpp  chrono.hpp  expected.hpp  format.hpp  optional.hpp  ratio.hpp  span.hpp  string.hpp  string_view.hpp  variant.hpp
include/mystl/utility/__detail/: bitset_impl.hpp  expected_base.hpp  optional_base.hpp  string_core.hpp  variant_storage.hpp
test/: CMakeLists.txt  README.md  test_framework.hpp  test_macros.hpp  test_main.cpp
test/__detail/: assert_impl.hpp  benchmark_tools.hpp  test_registry.hpp  timer.hpp
tests/: CMakeLists.txt
tests/benchmarks/: bench_vector.cpp
tests/framework/: mystl_bench.hpp  mystl_prop.hpp  mystl_test.hpp
tests/fuzz/: fuzz_string.cpp
tests/property/: vector_properties.cpp
tests/unit/: sample_test.cpp  test_allocator.cpp  test_allocator_comparison.cpp  test_core.cpp  test_main.cpp  test_pointer_traits.cpp  test_unique_ptr.cpp
